Add planned brews settings checkbox

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1047,6 +1047,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "",
     "BEAN_DATA_BUY_DATE": "",
     "BEAN_SORT_CREATION_DATE": "",
     "BEAN_SORT_PURCHASE_DATE": "",
