--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1065,6 +1065,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "Röstbereich aktivieren",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "Wasserbereich aktivieren",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "Cuppingbereich aktivieren",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "Bereich geplanter Brühungen aktivieren",
     "BEAN_DATA_BUY_DATE": "Kaufdatum",
     "BEAN_SORT_CREATION_DATE": "Erstelldatum",
     "BEAN_SORT_PURCHASE_DATE": "Kaufdatum",
