--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1065,6 +1065,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "Activar sección de tueste",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "Activar sección de agua",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "Activar sección de cata",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "TBD PLANNED_BREWS es",
     "BEAN_DATA_BUY_DATE": "Fecha de compra",
     "BEAN_SORT_CREATION_DATE": "Fecha de creación",
     "BEAN_SORT_PURCHASE_DATE": "Fecha de compra",
