--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1046,6 +1046,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "Activer la section de torréfaction",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "Activer la section d'eau",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "Activer la section cupping",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "TBD PLANNED_BREWS french",
     "BEAN_DATA_BUY_DATE": "Date d’achat",
     "BEAN_SORT_CREATION_DATE": "Date de création",
     "BEAN_SORT_PURCHASE_DATE": "Date d'achat",
