--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -1065,6 +1065,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "Kavurma bölümünü etkinleştir",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "Su bölümünü etkinleştir",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "Tadım bölümünü etkinleştir",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "TBD PLANNED_BREWS tr",
     "BEAN_DATA_BUY_DATE": "Satın alma tarihi",
     "BEAN_SORT_CREATION_DATE": "Oluşturma tarihi",
     "BEAN_SORT_PURCHASE_DATE": "Satın alma tarihi",
