--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -1065,6 +1065,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "启用烘焙选项卡",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "启用水质选项卡",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "启用杯测选项",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "TBD PLANNED_BREWS zh",
     "BEAN_DATA_BUY_DATE": "购买日期",
     "BEAN_SORT_CREATION_DATE": "创建日期",
     "BEAN_SORT_PURCHASE_DATE": "购买日期",
