--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1065,6 +1065,7 @@
     "PAGE_SETTINGS_SHOW_ROASTING_SECTION": "Activate roasting section",
     "PAGE_SETTINGS_SHOW_WATER_SECTION": "Activate water section",
     "PAGE_SETTINGS_SHOW_CUPPING_SECTION": "Activate cupping section",
+    "PAGE_SETTINGS_SHOW_PLANNED_BREWS_SECTION": "Activate planned brews section",
     "BEAN_DATA_BUY_DATE": "Buy date",
     "BEAN_SORT_CREATION_DATE": "Creation date",
     "BEAN_SORT_PURCHASE_DATE": "Purchase date",
